--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "3",
+    "bootstrap": "^4.3.1",
     "es-decorators": "^1.0.0",
     "jquery": "^3.2.1",
     "react": "^16.2.0",
